--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="container">
               <div class="left_side">
                   <div class="mini_box">
-                         <img src="./Logo.png">
+                         <img src="Logo.png" alt"A wellness logo">
                 <h3>For Individual</h3>
                 <p class="desktop_text">
                   Start benefitting from the wellness experience. For companies
